src/css/BetCard.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lora&display=swap');

.bet-card {
  background-image: url('src/css/images/items/card-back.png');
  background-size: 350px;
  color: #008080;
  padding: 25px;
  border-radius: 10px;
  /* Less rounded for a more angular feel */
  font-family: 'Bebas Neue', sans-serif;
  /* Art Deco-inspired font */
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 350px;
  height: 500px;
  transition: transform 0.3s ease-in-out;
}

.bet-info h3 {
  font-family: 'Lora', serif;
  /* Classy, elegant font for headers */
  font-size: 26px;
  border-bottom: 2px solid #D4AF37;
  /* Lighter gold */
  padding-bottom: 8px;
  margin-bottom: 15px;
  letter-spacing: 1px;
  text-transform: uppercase;
  color: #D4AF37;
}

.bet-info p {
  font-size: 14px;
  margin: 5px 0;
  font-family: 'Lora', serif;
}

.interaction-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 15px;
}

/* .favorite-btn, */
.accept-bet-btn {
  padding: 12px 20px;
  font-family: 'Lora', serif;
  font-size: 16px;
  border-radius: 5px;
  /* Sharper corners */
  cursor: pointer;
  border: 2px solid black;
  background: transparent;
  color: #D4AF37;
  transition: background-color 0.3s ease, color 0.3s ease;
}

.favorite-btn {
  font-size: 24px;
  background: transparent;
  border: none;
  cursor: pointer;
  transition: color 0.3s, transform 0.3s ease;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #aaa;
  /* Default color */
}

.favorite-btn.active {
  color: #ff3366;
  /* Active color */
  transform: scale(1.2);
  /* Slightly enlarge when liked */
}

.favorite-btn .heart-icon {
  transition: transform 0.3s ease;
  margin-right: 8px;
  /* Add margin to the right of the heart */
}

.favorite-btn.active .heart-icon {
  transform: rotate(360deg);
  /* Rotating heart when clicked */
}

.favorite-btn:hover {
  transform: scale(1.1);
  /* Slight hover effect */
}

.like-count {
  font-size: 20px;
  /* Adjust the font size if needed */
}


.accept-bet-btn {
  background: #D4AF37;
  color: #000;
  border: none;
}

.accepted {
  font-size: 16px;
  font-weight: bold;
  color: #D4AF37;
}

.interaction-bar i {
  margin-right: 8px;
}

/* Responsive Design */
@media (max-width: 350px) {
  .bet-card {
    width: 100%;
    height: auto;
    padding: 20px;
  }

  .interaction-bar {
    flex-direction: column;
    gap: 10px;
  }

  .favorite-btn,
  .accept-bet-btn {
    width: 100%;
  }
}

